change scope name

--- a/src/components/package.json
+++ b/src/components/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hadeel-dev/react-button",
+  "name": "@hadeel-mahmoud/react-button",
   "version": "1.0.0",
   "description": "React special button",
   "main": "Button.js",
